@@ -6,7 +6,8 @@ Please send gnubiff bug reports to Nicolas.Rougier@loria.fr.
 
 Version 2.1.2
  * Robert Sowada
-    - Changed version to 2.1.2, updated spec file
+   - Changed version to 2.1.2, updated spec file
+   - Cleanup: Documentation of functions in "src/options.cc"
 
 Version 2.1.1
  * Nicolas Rougier
